--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -3,7 +3,7 @@
     "blocks": [
       "rich-text",
       "info-card#button-right",
-      "info-card#button-leftt"
+      "info-card#button-left"
     ]
   },
   "rich-text": {
