--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -35,5 +35,17 @@
     "props": {
       "width": "20%"
     }  
+  },
+  "flex-layout.col#search": {
+    "children": [
+      "search-content",
+      "product-summary"
+    ]
+  },
+  "search-content": {
+    "blocks": ["gallery", "not-found"]
+  },
+  "gallery": {
+    "blocks": ["product-summary.shelf"]
   }
 }
