--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -32,6 +32,9 @@
     ]
   },
   "flex-layout.col#filter": {
+    "children": [
+      "filter-navigator.v3"
+    ],    
     "props": {
       "width": "20%"
     }  
