--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -1,5 +1,5 @@
 {
-    "store.custom#{templatename}": {
+    "store.custom#about-us": {
         "blocks": [
             "flex-layout.row#about-us"
         ]
