--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -38,16 +38,16 @@
         "maxHeight": "600px"
       }
     },
-    "tab-layout": {
+    "tab-layout#home": {
         "children": [
-          "tab-list",
-          "tab-content"
+          "tab-list#home",
+          "tab-content#home"
         ]
     },
-    "tab-list": {
+    "tab-list#home": {
         "children": [
-          "tab-list.item#1",
-          "tab-list.item#2"
+          "tab-list.item#home1",
+          "tab-list.item#home2"
         ]
     },
     "tab-content": {
@@ -56,20 +56,20 @@
           "tab-content.item#2"
         ]
     },
-    "tab-list.item#1": {
+    "tab-list.item#home1": {
         "props": {
           "tabId": "majorAppliances",
           "label": "Major Appliances",
           "defaultActiveTab": true
         }
     },
-    "tab-list.item#2": {
+    "tab-list.item#home2": {
         "props": {
             "tabId": "electronics",
             "label": "Electronics"
         }
     },
-    "tab-content.item#1": {
+    "tab-content.item#home1": {
         "children": [
           "rich-text#1"
         ],
@@ -77,7 +77,7 @@
           "tabId": "majorAppliances"
         }
     },
-    "tab-content.item#2": {
+    "tab-content.item#home2": {
         "children": [
           "rich-text#2"
         ],
