--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -50,10 +50,10 @@
           "tab-list.item#home2"
         ]
     },
-    "tab-content": {
+    "tab-content#home": {
         "children": [
-          "tab-content.item#1",
-          "tab-content.item#2"
+          "tab-content.item#home1",
+          "tab-content.item#home2"
         ]
     },
     "tab-list.item#home1": {
@@ -71,7 +71,7 @@
     },
     "tab-content.item#home1": {
         "children": [
-          "rich-text#1"
+          "rich-text#home1"
         ],
         "props": {
           "tabId": "majorAppliances"
@@ -79,7 +79,7 @@
     },
     "tab-content.item#home2": {
         "children": [
-          "rich-text#2"
+          "rich-text#home2"
         ],
         "props": {
           "tabId": "electronics"
